Fri Jul 13 23:18:19 2001  Akinori MUSHA  <knu@iDaemons.org>

	* lib/mkmf.rb: use File::split to split a target into a prefix and
	  a module name.  This also works around a just found bug of
	  String#rindex.

	* ext/extmk.rb.in: ditto.

Fri Jul 13 19:25:16 2001  Akinori MUSHA  <knu@iDaemons.org>

	* missing/strstr.c, missing/strtol.c: Merge from 1.7: replace with
	  public-domain ones.

Thu Jul 12 15:11:48 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/socket/socket.c (ruby_connect): workaround for the setup of
	  Cygwin socket(EALREADY).

Mon Jul  9 16:49:30 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/extmk.rb.in: modify RM macro.
	
	* lib/mkmf.rb: ditto.

Sun Jul  8 20:54:19 2001  Akinori MUSHA  <knu@iDaemons.org>

	* ruby.h: fix a wrong function name: rb_iglob() -> rb_globi().

Sun Jul  8 16:05:36 2001  Minero Aoki  <aamine@loveruby.net>

	* lib/net/protocol.rb (ProtoSocket#read): modify typo.

Fri Jul  6 18:01:10 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* object.c (rb_obj_dup): should free generic_ivar if original owns
	  them.

Fri Jul  6 15:11:38 2001  Akinori MUSHA  <knu@iDaemons.org>

	* lib/tempfile.rb: merge from 1.7: do not delete a used tempfile
	  from children processes.

	* lib/tempfile.rb: merge from 1.7: do not change the umask so as
	  not to affect other threads' file creation.  specify a file mode
	  (0600) when creating a tempfile instead.

Fri Jul  6 00:49:05 2001  Akinori MUSHA  <knu@iDaemons.org>

	* ext/readline/readline.c (readline_event): merge from 1.7: a
	  non-void function should return a value.

	* ext/readline/readline.c: merge from 1.7: add new methods:
	  Readline::completion_append_character and
	  Readline::completion_append_character=.

	* ext/readline/README, ext/readline/README.jp: merge from 1.7: add
	  an English version of the document.

Thu Jul  5 22:53:27 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* eval.c (rb_f_require): move rb_file_s_expand_path from
	  rb_find_file_noext().
