@@ -1,2 +1,3 @@
+extinit.c
 extmk.log
 extmk.rb
